Hide unknown variants by default and fix EVS allele freq error
When filtering genes by letter, unknown variants are now hidden by
default. A divide by zero error caused when an EVS allele
frequency was missing has now been fixed.

--- a/assets/public/css/styles.css
+++ b/assets/public/css/styles.css
@@ -281,40 +281,31 @@ list-style-type:none;
 margin:0 0 0 10px;
 }
 
-/* TODO create overlay */
-#loading-modal-container {
-  position: relative;
-  height: 100%;
-}
-#loading-overlay {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  background: black;
-  width:100%;
-  height:100%;
-  z-index: 1000;
-  background-color: rgba(0,0,0,0.0);
-  -webkit-border-radius: 10px;
-     -moz-border-radius: 10px;
-          border-radius: 10px;
-}
-#loading-modal {
-  width: 150px;
-  height: 40px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 10px;
-  padding: 10px;
-  background-color: red;
-  text-align: center;
-  z-index: 1001;
-  background-color: rgba(0,0,0,0.2);
-  -webkit-border-radius: 10px;
-     -moz-border-radius: 10px;
-          border-radius: 10px;
-}
 /* M U T A T I O N   T A B L E S */
+#show-unknown {
+position: relative;
+width: 100%;
+height: 40px;
+margin-top: 8px;
+}
+#show-unknown a:link,
+#show-unknown a:visited {
+position: absolute;
+right: 0px;
+border: 2px solid rgb(221,221,221);
+color: rgb(0,0,0);
+background: rgb(230,230,230);
+text-decoration: none;
+padding: 5px 10px;
+-webkit-border-radius: 5px;
+   -moz-border-radius: 5px;
+        border-radius: 5px;
+}
+#show-unknown a:hover {
+background: #C0C0C0;
+color: white;
+border-color: #C0C0C0;
+}
 #mutation-tables {
 margin-left:1px;
 padding:10px 0 10px 0;
@@ -472,6 +463,40 @@ color:#666;
 }
 #mutation-tables small.download-gene a:hover {
 color:#000;
+}
+/* Create overlay */
+#loading-modal-container {
+  position: relative;
+  height: 100%;
+}
+#loading-overlay {
+  display: none;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  background: black;
+  width:100%;
+  height:100%;
+  z-index: 1000;
+  background-color: rgba(0,0,0,0.0);
+  -webkit-border-radius: 10px;
+     -moz-border-radius: 10px;
+          border-radius: 10px;
+}
+#loading-modal {
+  width: 150px;
+  height: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  padding: 10px;
+  background-color: red;
+  text-align: center;
+  z-index: 1001;
+  background-color: rgba(0,0,0,0.2);
+  -webkit-border-radius: 10px;
+     -moz-border-radius: 10px;
+          border-radius: 10px;
 }
 
 /* P A G E  C O N T E N T */
